--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,48 @@
 .node circle {
     fill: #cccccc;
     stroke: #000;
-    stroke-width: 1.5px;
+
+    -webkit-animation-name: animation;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-play-state: running;
+
+    animation-name: animation;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    animation-play-state: running;
+}
+
+@-webkit-keyframes animation {
+    0% {
+        fill: #cccccc;
+        transform: scale(1, 1);
+    }
+    50.0% {
+        fill: orange;
+        transform: scale(2, 2);
+    }
+    100.0% {
+        fill: #cccccc;
+        transform: scale(1, 1);
+    }
+}
+
+@keyframes animation {
+    0% {
+        fill: #cccccc;
+        transform: scale(1, 1);
+    }
+    50.0% {
+        fill: orange;
+        transform: scale(2, 2);
+    }
+    100.0% {
+        fill: #cccccc;
+        transform: scale(1, 1);
+    }
 }
 
 .node text {
@@ -16,4 +57,18 @@
     fill: none;
     stroke: #000;
     stroke-width: 1px;
+}
+
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+}
+
+svg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
